[package]
name = "tiop01-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
desktop = []
profiling = ["dep:puffin_http"]

[lib]
name = "main"
crate-type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "tiop01-gui"
required-features = ["desktop"]

[dependencies]
log = "0.4"
byteorder = "1.5"
scarlet = "1.2"
strum = "0.26"
strum_macros = "0.26"
image2 = { version = "1.9", default-features = false, features = [] }
anyhow = "1.0"
profiling = { version = "1.0", default-features = false, features = ["profile-with-puffin", "procmacros"]}
puffin = "0.19"
puffin_http = { version = "0.16", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "wayland"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
serialport = "4.7"

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "android-native-activity"] }
egui-winit = { version = "0.29", default-features = false, features = ["android-native-activity"] }
pollster = "0.4"
android_logger = "0.14"
jni = "0.21"

[patch.crates-io]
image2 = { git = "https://github.com/dobo90/image2-rs", branch = 'main' }
scarlet = { git = "https://github.com/dobo90/scarlet", branch = 'master' }
